# OS_Assignment_Sem_212

./: README.md
cmake/: .gitignore  CMakeLists.txt  README.md
cmake/src/cpu/: cpu.c  cpu.h
cmake/src/loader/: CMakeLists.txt  loader.h
cmake/src/mem/: CMakeLists.txt  mem.c
cmake/src/os/: CMakeLists.txt
cmake/src/paging/: CMakeLists.txt
cmake/src/sched/: CMakeLists.txt  sched.c  sched.h
source_code/: .gitignore
src/common/: common.h
src/cpu/: CMakeLists.txt
src/mem/: mem.h
src/os/: os.c
src/queue/: CMakeLists.txt
src/timer/: CMakeLists.txt
